syntax = "proto3";

package tech.atls.files.v1alpha1;

import "tech/atls/files/v1alpha1/file.proto";

service FilesService {
  rpc ListFiles (ListFilesRequest) returns (ListFilesResponse) {}
}

message ListFilesRequest {
  message Pager {
    int32 offset = 1;
    int32 take = 2;
  }

  message IncludeCondition {
    repeated string values = 1;
  }

  message EqualCondition {
    string value = 1;
  }

  message IdQuery {
    oneof conditions {
      EqualCondition eq = 1;
      IncludeCondition in = 2;
    }
  }

  message Query {
    IdQuery id = 1;
  }

  enum OrderDirection {
    ORDER_DIRECTION_ASC_UNSPECIFIED = 0;
    ORDER_DIRECTION_DESC = 1;
  }

  message Order {
    string field = 1;
    OrderDirection direction = 2;
  }

  Pager pager = 1;
  Query query = 2;
  Order order = 3;
}

message ListFilesResponse {
  repeated File files = 1;
  string has_next_page = 2;
}
